--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,27 @@ body{
     text-align: center !important;
   }
 
+.form_cont{
+    width: 100%;
+    height: 100%;
+    margin-top: 5%;
+    margin-bottom: 18%;
+    padding-left: 15%;
+    padding-right: 5%;
+}
+
+.mainingreso{
+    width: 100%;
+    height: 500px;
+}
+
+.mainingreso p{
+    font-size: 30px;
+} 
+
+.carousel-item{
+    width: 30% !important;
+}
 
 .grillasite{
     text-align: center;
