--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,25 +1,19 @@
 img{
     width: 100%;
     margin-top: 4px;
-    border-radius: 8px;
-}
+    border-radius: 8px;}
 
 .div1{
     margin: 5px;
-    margin-top: 40px;
-   
-}
+    margin-top: 40px;}
 
 .img_menu{
-    width: 15px;
-}
+    width: 15px;}
 
 .img_portada{
     width: 100%;
     padding: 10%;
-    padding-bottom: 0%;
-    
-}
+    padding-bottom: 0%;}
 
 .div_footer{
     padding: 15%;
@@ -29,26 +23,19 @@ img{
     font-family: bebas-neue,sans-serif;
     font-weight: 400;
     font-style: normal; 
-    font-size: 30px;
-}
+    font-size: 30px;}
 
 .div_footer img{
-    width: 50px;
-    
-}
+    width: 50px;}
 
 .texto_futer_secundario{ 
     color: silver;
     font-family: sans-serif;
-    font-size: 15px;
-}
+    font-size: 15px;}
 
 .rocahoja{
     padding-left: 45%;
-    padding-right: 45%;
-    
-}
+    padding-right: 45%;}
 
 .rocahoja img{
-margin-bottom: 50%;
-}
+margin-bottom: 50%;}
