--- a/scss/_ingresos.scss
+++ b/scss/_ingresos.scss
@@ -4,3 +4,15 @@
   .text_ingresos p {
     color: $madeColor;
     font-family: bebas-neue,sans-serif; }
+
+    .rocahoja{
+      padding-left: 45%;
+      padding-right: 45%;}
+  
+  .rocahoja img{
+  margin-bottom: 50%;}
+
+  h2{
+    color: rgb(255, 255, 255);
+    margin-bottom: 30px;
+}
