--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -3,6 +3,12 @@
 @import 'index';
 @import 'galeria';
 @import 'contacto';
+@import 'footer';
+@import 'barnav';
+@import 'mixin';
+
+
+
 
 
 
@@ -11,60 +17,13 @@
 img{
     width: 100%;
     margin-top: 4px;
-    border-radius: 8px;}
-
-.div1{
-    margin: 5px;
-    margin-top: 40px;}
-
-.img_menu{
-    width: 15px;}
-
-.img_portada{
-    width: 100%;
-    padding: 10%;
-    padding-bottom: 5%;}
-
-.div_footer{
-    padding: 10%;
-    padding-bottom: 2%;
-    text-align: center;
-    color: $madeColor;
-    font-family: bebas-neue,sans-serif;
-    font-weight: 400;
-    font-style: normal; 
-    font-size: 30px;}
-
-.div_footer img{
-    width: 50px;}
-
-.texto_futer_secundario{ 
-    color: silver;
-    font-family: sans-serif;
-    font-size: 15px;}
-
-.rocahoja{
-    padding-left: 45%;
-    padding-right: 45%;}
-
-.rocahoja img{
-margin-bottom: 50%;}
-
-.text_ingresos{
-    text-align: center;
-}
-
-.text_ingresos p{
-    color: $madeColor;
-    font-family: bebas-neue,sans-serif;
-}
-
-h2{
-    color: white;
-    margin-bottom: 30px;
-}
-
-.form_cont{
-    color: $madeColor;
+    border-radius: 8px;}  //esto afecta a todas las imagenes de la pagina, magicamente no rompe nada
     
-}
+
+
+
+
+
+
+
+
