Se modifico las imagenes y parte de la estructura de los ingresos

--- a/scss/_ingresos.scss
+++ b/scss/_ingresos.scss
@@ -1,18 +1,33 @@
-.text_ingresos {
-    text-align: center; }
-  
-  .text_ingresos p {
-    color: $madeColor;
-    font-family: bebas-neue,sans-serif; }
 
-    .rocahoja{
-      padding-left: 45%;
-      padding-right: 45%;}
-  
-  .rocahoja img{
-  margin-bottom: 50%;}
 
-  h2{
-    color: rgb(255, 255, 255);
-    margin-bottom: 30px;
+.rocahoja{
+padding-left: 45%;
+padding-right: 45%;}
+
+.rocahoja img{
+margin-bottom: 50%;}
+
+.contenedor_card{
+background-color:black;
+display: flex;
+height: 300px;
+justify-content: space-evenly;
+align-items: center;
+}
+
+.card_ingresos{
+
+width: 25%;
+height: 200px;
+
+}
+
+.card_img{
+    width: 90%;
+
+}
+
+.card_img:hover{
+    transform: scale(120%);
+    transition: 2s;
 }
