--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,3 @@
-.text_ingresos {
-  text-align: center; }
-
-.text_ingresos p {
-  color: #e7c010;
-  font-family: bebas-neue,sans-serif; }
-
 .rocahoja {
   padding-left: 45%;
   padding-right: 45%; }
@@ -12,9 +5,23 @@
 .rocahoja img {
   margin-bottom: 50%; }
 
-h2 {
-  color: white;
-  margin-bottom: 30px; }
+.contenedor_card {
+  background-color: black;
+  display: flex;
+  height: 300px;
+  justify-content: space-evenly;
+  align-items: center; }
+
+.card_ingresos {
+  width: 25%;
+  height: 200px; }
+
+.card_img {
+  width: 90%; }
+
+.card_img:hover {
+  transform: scale(120%);
+  transition: 2s; }
 
 .img_portada {
   width: 100%;
@@ -22,8 +29,21 @@ h2 {
   padding-bottom: 5%; }
 
 .div1 {
+  width: 100%;
   margin: 5px;
-  margin-top: 40px; }
+  margin-top: 22%;
+  margin-bottom: 22%; }
+
+@media screen and (min-width: 768px) {
+  .img_portada {
+    width: 100%;
+    padding: 10%;
+    padding-bottom: 5%; }
+  .div1 {
+    width: 100%;
+    margin: 5px;
+    margin-top: 80px;
+    margin-bottom: 10px; } }
 
 .form_cont {
   color: #6e93e4; }
@@ -48,51 +68,6 @@ h2 {
 
 .img_menu {
   width: 15px; }
-
-.mixin_contenedor {
-  background-color: red;
-  width: 110px;
-  height: 110px;
-  display: inline-block; }
-
-.mixin_contenedor1 {
-  background-color: yellowgreen;
-  width: 220px;
-  height: 200px;
-  display: inline-block; }
-
-.mixin_contenedor2 {
-  background-color: orange;
-  width: 162px;
-  height: 53px;
-  display: inline-block; }
-
-.mixin_contenedor3 {
-  background-color: purple;
-  width: 350px;
-  height: 30px;
-  display: inline-block; }
-
-.circulo, .extend_circulo1, .extend_circulo2, .extend_circulo3, .extend_circulo4 {
-  height: 100px;
-  width: 100px;
-  border-radius: 50px;
-  display: inline-block; }
-
-.extend_circulo1 {
-  background-color: orangered; }
-
-.extend_circulo2 {
-  background-color: yellowgreen; }
-
-.extend_circulo3 {
-  background-color: burlywood; }
-
-.extend_circulo4 {
-  background-color: goldenrod; }
-
-.extend_circulo4:hover {
-  background-color: aquamarine; }
 
 img {
   width: 100%;
