--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -6,5 +6,25 @@
 }
 
 .div1{
+    width: 100%;
     margin: 5px;
-    margin-top: 40px;}
+    margin-top: 22%;
+    margin-bottom: 22%;}  
+
+
+
+    @media screen and (min-width: 768px) {
+        .img_portada {
+            width: 100%;
+            padding: 10%;
+            padding-bottom: 5%; 
+        
+        }
+        
+        .div1{
+            width: 100%;
+            margin: 5px;
+            margin-top: 80px;
+            margin-bottom: 10px;}  
+
+    }
