--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,4 +1,6 @@
+
 @import 'mixin';
+@import 'eventos';
 @import 'variables';
 @import 'ingresos';
 @import 'index';
@@ -6,6 +8,7 @@
 @import 'contacto';
 @import 'footer';
 @import 'barnav';
+ 
 
 
 
