se genero un gran cambio en la estructura y se agrgo contenido a algunas secciones como eventos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,31 @@
   transform: scale(120%);
   transition: 2s; }
 
+.div_danke {
+  display: inline-block;
+  text-align: center;
+  color: silver;
+  margin-top: 5%;
+  margin: 0px;
+  padding: 0px; }
+
+.text {
+  font-family: bebas-neue,sans-serif;
+  color: gold;
+  font-size: 40px;
+  margin: 0;
+  padding: 0; }
+
+.div_agradecimiento {
+  display: inline-block;
+  text-align: center;
+  margin-top: 5%;
+  color: silver; }
+
+.div_agradecimiento .motivo {
+  font-family: bebas-neue,sans-serif;
+  font-size: 40px; }
+
 .rocahoja {
   padding-left: 45%;
   padding-right: 45%; }
