--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,7 +24,7 @@
 
 .text {
   font-family: bebas-neue,sans-serif;
-  color: gold;
+  color: #e7c010;
   font-size: 40px;
   margin: 0;
   padding: 0; }
@@ -37,7 +37,8 @@
 
 .div_agradecimiento .motivo {
   font-family: bebas-neue,sans-serif;
-  font-size: 40px; }
+  font-size: 40px;
+  margin-bottom: 2%; }
 
 .rocahoja {
   padding-left: 45%;
