--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,7 +108,7 @@
   padding: 10%;
   padding-bottom: 2%;
   text-align: center;
-  color: #f0b618;
+  color: #e7c010;
   font-family: bebas-neue,sans-serif;
   font-weight: 400;
   font-style: normal;
